staging/Istio-Envoy-QAT-DLB/config/HTTPS/istio-gateway_https.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nighthawk-server-gateway
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 443
      name: sm-nighthawk-server
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: nighthawk-credential # must be the same as secret
    hosts:
    - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nighthawk-ingress
spec:
  hosts:
  - "*"
  gateways:
  - nighthawk-server-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: sm-nighthawk-server
        port:
          number: 10000
